# manos_graspit_config

./: CMakeLists.txt  package.xml
config/: graspit_planner.yaml  graspit_planner_min.yaml  graspit_planner_opt.yaml  graspit_planner_opt_but_once.yaml
launch/: graspit_planning_service.launch  graspit_planning_service_min.launch  graspit_planning_service_opt.launch
resources/models/obstacles/: manos_table.iv
resources/models/robots/schunk_pg70/: schunk_pg70.xml
resources/models/robots/schunk_pg70/iv/: pg70_base_link.iv
resources/urdfs/: pg70.urdf
resources/worlds/: schunk_pg70_min_contacts_world.xml  schunk_pg70_min_contacts_world_blue_pole_small.xml  schunk_pg70_world.xml
schunk_pg70/: pg70.urdf
schunk_pg70/graspit_files/models/robots/schunk_pg70/iv/: pg70_base_link.iv  pg70_base_link.xml  pg70_finger1_link.iv  pg70_finger1_link.xml  pg70_finger2_link.iv  pg70_finger2_link.xml
schunk_pg70/graspit_files/worlds/: schunk_pg70_world.xml
schunk_pg70/models/robots/schunk_pg70/iv/: pg70_base_link.iv  pg70_finger_left_link.iv  pg70_finger_left_link.xml  pg70_finger_right_link.iv  pg70_finger_right_link.xml
schunk_pg70/models/robots/schunk_pg70/virtual/: contacts.xml
schunk_pg70/worlds/: schunk_pg70_world.xml
