<?xml version="1.0"?>
<package format="2">
  <name>manos_graspit_config</name>
  <version>0.0.1</version>
  <description>The manos_graspit_config package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
